amun/overlays/cnv-prod/amun-api/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
spec:
    host: amun.moc.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
    tls:
        caCertificate: ENC[AES256_GCM,data:E28h6I02SEnML8qtBET7RB1ePpvuVmGXTp+tsF/4TUVY55NltVVoIarjgAUMfhmqetdyWX43ZG4UwT8hUpS3tynF1Z7i8ELbuRyKILmFOTOrt8I6i/6eIdvAPoAwhh96yJdA+1/iz9Phml7oIOv5o99rUOzVnmLlwAtH1HMvHm/925mYrrkXCE2QTkBRgNnlEGCd90BUA+f9rvNHhbgCAlQEU/UJA+HaaPx2SXDo5ekGwjnB01q+9QJXKJ5Fl94R0acBE1DHjO49TKF9pKgCH4911h6ZA5Yi1V9LyGD/x8QNS5/TPxelLyMNRnwen48Nk71RapdXDjqJ6S9LQTiaEBLOOamQWrshQfAkPev50F8vXu4+BcOjo7T1V7WzKO3wYxyScRimGwMv8FntiIxAU1y9wrI1+LQeIlHAr77wHqegpoGFZ5vRHYdOjC3ogi6aa5kcYDxHj [...]
        certificate: ENC[AES256_GCM,data:AYiNr6RH/yXos4PYl+VXAd4CFPFnoEWFcCpioohN1Sii9hRUVQG+6MadmnvhWNSxmJ6+5zBOumDrNjGr+ByKsK1Mr0NUdtqkda2wny55h4UMufCTbUmvwceIctB5xC3virEeYSPi1OI2ks8FwhM/JISm+TIDvjXnyrKMgcsQLGGVAGsxfZg+rpuxpG8mnNqSUGdw0QFjGWwojQtya8OP8SSvCznFkC7Y0IU3RMY1tFJjtspN/0RqBA/EY++7yeyxefPaKka+HR1HHCdjye7jhZMOJVRe401BN/T8WR9GJyxpsd4HAVRw7fOoRct7DWtpRancVRnxhQAtbX9XjWnhhB+X41y/16eF0OYWgYhk6TvUcUoL6KZwA2MRUhlZUhahVoYply7losTFpo/LzA96To9d097D06c4/odXBkF8hsh5VOCjYrwvacxgWY9hg85XKINLW95k52D [...]
        key: ENC[AES256_GCM,data:ql8J7f0Ro9hPaG/0dXZw4FmKic7mGsnDglMhDXu7vvcY83AItfc9GyKPHvjmgq/8fn/uB+90PspL64KDpxDcyAOolNGITGbthdhxUtvONepWYWeNAMpeoYH3RemP3RSgfARoKQXxGidQx1i8EaTFvrGvgomn0jWckAbTqK5/xvTdHdzgoVCtYJ1IZKuGsGK84K8KS0ekU5QTJknMqlD2OI5S7u+uYsICzfGQDd7+4rz4ENdQXwPdOQsYfs8HYoO0rMoRaM9Aqod5tPBG8D7Cb6SDbaN/L1yqHYGarBc3wrBk5xIg2bdsVFZLGrXJJdTF/PoFGceUjs+5uM4D7UPY1qgfgrhSCUN9Q1OgDlrE4X4g2itzZGa6QkxwHW7cLNxVqiVB+sW+pGytBW2AB60HDB+N9NoWaFv+SxDB5k8XxvSmBFa35ZXXE1gxjwnuuLVpqt948QNWDqtI4kfEfZo [...]
        termination: ENC[AES256_GCM,data:BsgbMQ==,iv:JPe3e+SkDKFOOP/bTV0jRYjW8fELGLeNVVsvFLABRBw=,tag:IVKiN6YllATWXYMBBA9/QQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-02-16T19:46:13Z'
    mac: ENC[AES256_GCM,data:gVihAXBMOzovB36ZHJ+xzCPM40rRcz9U+r+6mcpwNPLuDJUejnTr4Vc836DEKx0rDINKEeF72b4woAP3DUyJ/z/1nCcg/FaUlVf26JmFtPZEZ+kLvvaFKVDDcsR9T7TzndpfDG1NJdHIRGifDbZJGjRfVYboJGbdRwdk3LdguT4=,iv:ouJjPBi6YR0qqTCYY+/1FBAhDVjSuf1llvGeG7Odf/k=,tag:RVgBPV1jLFd2H5x4xK8KKQ==,type:str]
    pgp:
    -   created_at: '2021-02-16T19:46:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYARAAhKLjYhSOV6OjHkyr2FkWciwn6kf2zAr1kMKbO7F91uoz
[...]
            =tbYc
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-02-16T19:46:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/cx7AAOzs+Gu2m3IqbxNi1Wv56uG7DsrjGGOKJQ55sg2P
[...]
            1ID35a0XN1+2N/P8GhdHLZavV9rRLZaLusisXvg=
            =+4eG
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-02-16T19:46:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgApeqBFiW4n2BKeLOxpXPwebqG25cWhA2MZbKr3aAZ3y0M
[...]
            nv93K6lMv9cHCYg+aG21bv0ErqD3O9pM+tqdH38=
            =AXWN
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-02-16T19:46:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA7vMDF1jUn3mARAAujZUkgXXNlZ+5wQkIkpSCiK9hsoAEhl/UbOUFXWFJwl8
[...]
            =ELkC
            -----END PGP MESSAGE-----
        fp: 68BD1529A372C8BA561C9DDC377298152D08B95B
    -   created_at: '2021-02-16T19:46:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ/+NJtKxS38mOnFYcWWuF4lRFekSUz9rxrzDZUWDT7P8mK0
[...]
            =sNdD
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
